@@ -35,6 +35,9 @@ export (QQ's a zone into a tarball)
 Xlist (mlist, olist, rlist, zlist, slist, tlist, qlist)
 (lots of major bugfixes too)
 @
+[Nov 01 2010] - Rumble
+  Fixed do_scan crash due to exits to NOWHERE. (thanks Rhade)
+  Changed do_score experience tnl to list only mortals since LVL_IMMORT showed negative EXP.
 [Oct 30 2010] - Jamdog
   Added ability for players to list/show their own ideas, bugs and typos (thanks Frenze)
   Added more details to header for idea/bug/typo show command (thanks Parna)
